[metadata]
name = iheart-cli
version = 0.5.3
author = Shashank Gopikrishna
author_email = shashank.gopikrishna@gmail.com
description = Command line utility to search and play iHeartRadio
description_file = README.rst
long_description = file: README.rst
long_description_content_type = text/x-rst
home_page = https://github.com/shashfrankenstien/iheart-cli
license = MIT
license_files = LICENSE


[options]
packages = find:
install_requires =
	python_vlc>=3.0.12118
	requests>=2.23.0
	beautifulsoup4>=4.11.1
	lxml>=4.8.0


[options.packages.find]
exclude =
	experimental
	tests


[options.entry_points]
console_scripts =
	iheart = iheart.__main__:main
